--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>Assignment 02 Song Details</title>
+  </head>
   <body></body>
 </html>
