--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
     <title>Assignment 02 Song Details</title>
+
   </head>
-  <body></body>
+  <body>
+
+    <p>Life's like a road that you travel on</p>
+    <p>When there's one day here, and the next day gone</p>
+
+  </body>
 </html>
