--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
 
-    <div class="twolyrics"></div>
-    <p>Life's like a road that you travel on</p>
-    <p>When there's one day here, and the next day gone</p>
-    /div>
+    <div class="twolyrics">
+      <p>Life's like a road that you travel on</p>
+      <p>When there's one day here, and the next day gone</p>
+    </div>
 
   </body>
 </html>
