--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
 
     <div class="twolyrics">
-      <p>Life's like a road that you travel on</p>
-      <p>When there's one day here, and the next day gone</p>
+      <p style="color: red;">Life's like a road that you travel on</p>
+      <p style="color: red;">When there's one day here, and the next day gone</p>
     </div>
 
   </body>
