--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
 
+    <body style="background-color:blue;">
+
     <div class="twolyrics">
       <p style="color: red;">Life's like a road that you travel on</p>
       <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
