--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
 
-    <body style="background-color:lightblue;">
+    <p style="background-color:lightblue;">
+    <p
 
     <div class="twolyrics">
       <p style="color: red;">Life's like a road that you travel on</p>
