--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <p style="background-color:lightblue;">
-    <p style=""
+    <p style="color: red;>
 
     <div class="twolyrics">
       <p style="color: red;">Life's like a road that you travel on</p>
