--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <p style="color: red;>
 
     <div class="twolyrics">
-      <p style="color: red;">Life's like a road that you travel on</p>
+      <p>Life's like a road that you travel on</p>
       <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
-      <p style="color: red;">When there's one day here, and the next day gone</p>
+      <p>When there's one day here, and the next day gone</p>
     </div>
 
   </body>
