--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
 
-    <p style="background-color:lightblue;">
-    <p style="color: red;>
+    <div style="background-color:lightblue;">
+    <div style="color: red;>
 
     <div class="twolyrics">
       <p>Life's like a road that you travel on</p>
