--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   </head>
   <body>
-    <div style="background: red;>
-      <p style="background: lightblue"></div>
+    <div style="background: red;></div>
+      <p style="background: lightblue
 
   </body>
 </html>
