--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   </head>
   <body>
-    <div style="background: red;></div>
+    <div style="background: red;>
       <p style="background: lightblue
 
   </body>
