--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div style="background: red;>
-      <p style="background: lightblue></div>
+
+      <p style="background: lightblue><
 
   </body>
 </html>
