--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div style="background: red">
-      <p style="background: lightblue;"
+      <p style="background: lightblue;"></p>
 
     <p style
 
