--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div style="background: red">
-      <p style="background: lightblue;"></p>
+      <p style="background: lightblue;">Life's like a road that you travel on</p>
+      </div>img
 
     <p style
 
