--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div style="background: red">
       <p style="background: lightblue;">Life's like a road that you travel on</p>
-      </div>img
+      <img src=""
 
     <p style
 
