--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div style="background: red">
       <p style="background: lightblue;">Life's like a road that you travel on</p>
       <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
-      
+      <p style="background: lightblue;"></p>
 
     <p style
 
