--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       <p style="background: lightblue;">Life's like a road that you travel on</p>
       <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
       <p style="background: lightblue;">When there's one day here, and the next day gone</p>
-      <hr
+      <hr />
+    </div>
 
     <p style
 
