--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+   <div 
     <div style="background: red">
       <p style="background: lightblue;">Life's like a road that you travel on</p>
       <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
@@ -14,7 +15,7 @@
       <hr />
     </div>
 
-    
+
   </body>
 
 </html>
