--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p style="background: lightblue;">When there's one day here, and the next day gone</p>
       <hr />
     </div>
-  </body>div
+  </div>
 
   </body>
 
