--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
    <div>
     <h1>Life is a Highway</h1>
-    <h3>Ras</h3>
-    <div style="background: red">
-      <p style="background: lightblue;">Life's like a road that you travel on</p>
-      <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
-      <p style="background: lightblue;">When there's one day here, and the next day gone</p>
-      <hr />
-    </div>
+    <h3>Rascal Flatts</h3>
+      <div style="background: red">
+        <p style="background: lightblue;">Life's like a road that you travel on</p>
+        <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
+        <p style="background: lightblue;">When there's one day here, and the next day gone</p>
+        <hr />
+      </div>
   </div>
 
   </body>
