--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p style="background: lightblue;">When there's one day here, and the next day gone</p>
         <img id="img1"
           src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png"
-        <p id="p2" style=""
+        <p id="p2" style="background: lightblue;"
         <hr />
       </div>
   </div>
