--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
         <p id="p2" style="background: lightblue;"></p>
         <hr />
-        <p id="hidden-paragraph"
+        <p id="hidden-paragraph" hidden
       </div>
   </div>
 
