--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
         <p style="background: lightblue;">When there's one day here, and the next day gone</p>
         <img id="img1"
-          src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
+          src="microphone.gif">
         <p id="p2" style="background: lightblue;"></p>
         <hr />
         <p id="hidden-paragraph" hidden>You can't see me</p>
