--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h3>Rascal Flatts</h3>
       <div style="background: red">
         <p style="background: lightblue;">Life's like a road that you travel on</p>
-        <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
+        <img src="microphone.gif">
         <p style="background: lightblue;">When there's one day here, and the next day gone</p>
         <img id="img1"
-          src="microphone.gif">
+          src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
         <p id="p2" style="background: lightblue;"></p>
         <hr />
         <p id="hidden-paragraph" hidden>You can't see me</p>
