--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
    <div>
+    <div id
     <img src="./images/microphone.gif">
     <h1>Life is a Highway</h1>
     <h3>Rascal Flatts</h3>
