--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
    <div>
-    <div id="song-details"></div>
+    <div id="song-details">
     <img src="./images/microphone.gif">
     <h1>Life is a Highway</h1>
     <h3>Rascal Flatts</h3>
@@ -20,6 +20,7 @@
         <p id="p2" style="background: lightblue;"></p>
         <hr />
         <p id="hidden-paragraph" hidden>You can't see me</p>
+      </div>
       </div>
   </div>
 
