--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
    <div>
     <div id="song-details">
-      <img src="./images/microphone.gif">
-    <h1>Life is a Highway</h1>
-    <h3>Rascal Flatts</h3>
+      <img src="./images/microphone.gif" />
+      <h1>Life is a Highway</h1>
+      <h3>Rascal Flatts</h3>
       <div style="background: red">
         <p style="background: lightblue;">Life's like a road that you travel on</p>
         <p style="background: lightblue;">When there's one day here, and the next day gone</p>
