--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <div>
     <div id="song-details">
       <img src="./images/microphone.gif" />
-      <h1 id="song-title"><strong><Life is a Highway</strong></h1>
+      <h1 id="song-title"><strong>Life is a Highway</strong></h1>
       <h3>Rascal Flatts</h3>
       <div style="background: red">
         <p style="background: lightblue;">Life's like a road that you travel on</p>
