--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="song-details">
       <img src="./images/microphone.gif" />
       <h1 id="song-title"><strong>Life is a Highway</strong></h1>
-      <h3>Rascal Flatts</h3>
+      <h3 id="song-author">Rascal Flatts</h3>
       <div style="background: red">
         <p style="background: lightblue;">Life's like a road that you travel on</p>
         <p style="background: lightblue;">When there's one day here, and the next day gone</p>
