--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="./images/microphone.gif" />
       <h1 id="song-title"><strong>Life is a Highway</strong></h1>
       <h3 id="song-author">&copy; Rascal Flatts</h3>
-      <div style="background: red">
+      <div style="background: red" id="">
         <p style="background: lightblue;">Life's like a road that you travel on</p>
         <p style="background: lightblue;">When there's one day here, and the next day gone</p>
         <img id="img1"
