--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="song-details">
       <img src="./images/microphone.gif" />
       <h1 id="song-title"><strong>Life is a Highway</strong></h1>
-      <h3 id="song-author">&copy; Rascal Flatts</h3>
+      <h3 id="song-author">&copy; 2006 Rascal Flatts</h3>
       <div style="background: red" id="song-lyrics">
         <p style="background: lightblue;" id="p1"><i>Life's like a road that you travel on</i></p>
         <img id="img1" src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png" />
